# intellij-haskforce

./: .gitignore  .gitmodules  .travis.properties  .travis.yml  CHANGELOG.md  CNAME  CONTRIBUTING.md  README.md  build.gradle  build.skeleton.properties  build.xml  findbugs-excludes.xml  gradle.properties  index.html  ivy.xml  params.json  repl  settings.gradle  travis.sh  version.txt
.github/workflows/: build.yaml
.idea.carymrobbins/: ant.xml  bashsupport_project.xml  emacs.xml  modules.xml  workspace.xml
.idea.carymrobbins/dictionaries/: crobbins.xml
.idea.carymrobbins/inspectionProfiles/: Project_Default.xml
docs/dev/: README.md  modules.md  parsing.md  run.md
gradle/wrapper/: gradle-wrapper.properties
resources/dictionary/: haskell.dic
resources/fileTemplates/internal/: Haskell Module.hs.ft
resources/intentionDescriptions/AddBuildDepends/: description.html
resources/intentionDescriptions/AddLanguagePragma/: description.html
resources/intentionDescriptions/AddTypeSignature/: description.html
resources/intentionDescriptions/RemoveForall/: description.html
src/com/haskforce/: Cabal.bnf  HaskForceBuildProcessParametersProvider.scala  HaskForcePluginVerifier.java  HaskForceRuntime.scala  Haskell.bnf  Haskell.flex  HaskellAnnotator.java  HaskellBraceMatcher.java  HaskellColorSettingsPage.java  HaskellFileType.java  HaskellFileTypeFactory.java  HaskellIcons.java  HaskellLanguage.java  HaskellLexer.java  HaskellLexerAdapter.java  HaskellModuleBuilder.java  HaskellModuleBuilder.scala  HaskellModuleType.java  HaskellModuleType.scala  HaskellParserDefinition.java  HaskellSdkType.java  HaskellSdkType.scala  HaskellSyntaxHighlighter.java  HaskellSyntaxHighlighterFactory.java  HaskellUtil.java  Implicits.scala  _HaskellLexer.flex  _HaskellLexer.java
src/prelude/: package.scala
src/prelude/imports/: PreludeImports.scala
src/prelude/ops/: EitherOps.scala
stylesheets/: stylesheet.css
tests/gold/cabal/completion/Module00001/: conf.cabal
tests/gold/cabal/completion/Module00001/src/Data/Conf/: Parser.hs
tests/gold/cabal/parser/: Benchmark.cabal  BuildDepends.cabal  CommasOnNextLine.cabal  Comments.cabal  ComplexKey.cabal  DataDir.cabal  EmptyKeyShouldBeAllowed.cabal  FeldsparLanguage.cabal  Flags.cabal  FreeFormWithIndent.cabal  GhcOptions.cabal  Hasky.cabal  Homepage.cabal  IfElseStatement.cabal  IfStatement.cabal  KeyContainsComment.cabal  Lens.cabal  LittleBiggerLibrary.cabal  MainIsContainsPath.cabal  OtherModules.cabal  SimpleExecutable.cabal  SimpleKeyAfterSimpleLibrary.cabal  SimpleLibrary.cabal  SourceRepo.cabal  TalismanRedux.cabal  Tasty.cabal  VersionKey.cabal  braces00001.cabal  error00001.cabal  example00001.cabal  example00002.cabal  example00003.cabal  example00004.cabal  example00005.cabal  sourceDirs00001.cabal
tests/gold/cabal/parser/expected/: Benchmark.txt  BuildDepends.txt  CommasOnNextLine.txt  Comments.txt  ComplexKey.txt  DataDir.txt  EmptyKeyShouldBeAllowed.txt  FeldsparLanguage.txt  Flags.txt  FreeFormWithIndent.txt  GhcOptions.txt  Hasky.txt  Haxl.txt  Homepage.txt  IfElseStatement.txt  IfStatement.txt  KeyContainsComment.txt  Lens.txt  LittleBiggerLibrary.txt  MainIsContainsPath.txt  OtherModules.txt  SimpleExecutable.txt  SimpleKey.txt  SimpleKeyAfterSimpleLibrary.txt  SimpleLibrary.txt  SourceRepo.txt  TalismanRedux.txt  Tasty.txt  TwoSimpleKeys.txt  VersionKey.txt  braces00001.txt  error00001.txt  example00001.txt  example00002.txt  example00004.txt  example00005.txt  example00006.txt  example00007.txt  example00008.txt  example00009.txt  (+35 more)
tests/gold/cabal/parser/lexer/expected/: braces00001.txt  error00001.txt  example00001.txt  example00002.txt  example00003.txt  example00004.txt  example00005.txt  example00006.txt  example00007.txt  example00008.txt  example00009.txt  example00011.txt  example00012.txt  example00013.txt  example00015.txt  ghc00001.txt  ghc00002.txt  ghc00003.txt  ghc00004.txt  ghc00006.txt  ghc00007.txt  ghc00008.txt  ghc00009.txt  ghc00010.txt  ghc00011.txt  ghc00012.txt  ghc00014.txt  ghc00019.txt  ghc00020.txt  ghc00022.txt  ghc00023.txt  ghc00025.txt  ghc00028.txt  ghc00029.txt  ghc00031.txt  ghc00032.txt  ghc00033.txt  ghc00034.txt  ghc00037.txt  ghc00040.txt  (+12 more)
tests/gold/importWizard/stack/stack-ide/stack-ide/: stack-ide.cabal
tests/gold/project/externalSystem/stack/packageConfig/00001/: foo.cabal
tests/gold/tools/cabal/parser/: example00006.cabal  example00008.cabal  example00015.cabal  if00001.cabal  if00002.cabal
tests/gold/tools/cabal/parser/expected/: blank00001.txt  example00003.txt  example00005.txt  example00007.txt  example00008.txt  example00014.txt  example00015.txt  ghc00003.txt  ghc00006.txt  ghc00007.txt  ghc00009.txt  ghc00014.txt  ghc00015.txt  ghc00018.txt  ghc00021.txt  ghc00023.txt  ghc00026.txt  ghc00028.txt  ghc00030.txt  ghc00033.txt  ghc00034.txt  ghc00035.txt  ghc00037.txt  ghc00038.txt  ghc00039.txt  ghc00043.txt  ghc00044.txt  ghc00046.txt  ghc00047.txt  ghc00048.txt  ghc00049.txt  ghc00050.txt  ghc00051.txt  ghc00052.txt  ghc00054.txt  sourceDirs00001.txt
tests/gold/tools/cabal/parser/lexer/expected/: example00003.txt  example00004.txt  example00010.txt  example00014.txt  ghc00005.txt  ghc00013.txt  ghc00015.txt  ghc00016.txt  ghc00017.txt  ghc00018.txt  ghc00021.txt  ghc00024.txt  ghc00026.txt  ghc00027.txt  ghc00035.txt  ghc00036.txt  ghc00038.txt  ghc00039.txt  ghc00044.txt  ghc00045.txt  ghc00046.txt  ghc00048.txt  ghc00051.txt  ghc00053.txt  if00002.txt  sourceDirs00001.txt
tests/gold/tools/stack/importWizard/stack-ide/ide-backend/ide-backend/: ide-backend.cabal
tests/gold/tools/stack/importWizard/stack-ide/ide-backend/ide-backend-common/: ide-backend-common.cabal
tests/gold/tools/stack/importWizard/stack-ide/ide-backend/ide-backend-server/: ide-backend-server.cabal
tests/gold/tools/stack/importWizard/stack-ide/stack-ide-api/: stack-ide-api.cabal
tools/: build  generate.sh  patch-plugin-version  patch-zip-version  run-jflex  show-cabal-terminals  validate-dic  yacc-cabal
tools/parser/: gen-types  gen-types.hs  parser2020.yaml
(+2234 files in other folders)
