copyright:      Copyright (c) 2013 Emil Axelsson, Peter Jonsson,
                                   Anders Persson, Josef Svenningsson
                Copyright (c) 2012 Emil Axelsson, Gergely Dévai,
                                   Anders Persson, Josef Svenningsson
                Copyright (c) 2009-2011, ERICSSON AB