library
    exposed-modules: Foo
                     Bar
    if flag(dev)
        hs-source-dirs: . app
        exposed-modules: DevelMain
        build-depends:   resourcet              >= 1.1      && < 1.2
                       , process                >= 1.2      && < 1.3
                       , foreign-store          >= 0.1      && < 0.2

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards