-- The name of the package.
name:             talisman-redux

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.1

-- A short (one-line) description of the package.
synopsis:            talisman

-- A longer description of the package.
-- description:

-- The package author(s).
author:              Kasper

category:            Development

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.8


library
  hs-source-dirs:    src/main
  exposed-modules:
    Board.Adventure.Adventure
    , Board.Follower.Follower
    , Board.Object.Object
    , Board.Space.Space
    , Character.Character
    , DungeonMaster.DungeonMaster
    , DungeonMaster.Movement2
    , DungeonMaster.Fight
    , Game.GameState
    , TalismanErrors.TalismanErrors
  build-depends:       base >=4.6
                       , lens
                       , containers
                       , mtl
                       , either
  ghc-options:         -threaded -O2

test-suite unit-tests
  default-language:
   Haskell2010
  type:
   exitcode-stdio-1.0
  hs-source-dirs: src/test
  main-is: AllTests.hs
  build-depends:       base >= 4.6 ,
                       tasty,
                       hspec,
                       tasty-quickcheck,
                       tasty-hunit,
                       tasty-smallcheck,
                       tasty-ant-xml,
                       tasty-hspec,
                       talisman-redux,
                       containers,
                       lens,
                       either,
                       mtl

  ghc-options:         -threaded