name:                stack-ide
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          chrisdone@fpcomplete.com
copyright:           FP Complete
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Stack.Ide
                       Stack.Ide.AnnotateHaskell
                       Stack.Ide.CmdLine
                       Stack.Ide.Util.ValueStream
  build-depends:       base >= 4.5  && < 5,
                       async,
                       aeson,
                       ansi-wl-pprint,
                       attoparsec,
                       bytestring,
                       directory,
                       filepath,
                       ide-backend,
                       optparse-applicative,
                       text,
                       stack-ide-api == 0.1.0.0,
                       ide-backend-common,
                       haskell-src-exts >= 1.15
  default-language:    Haskell2010
  ghc-options:         -Wall

executable stack-ide
  hs-source-dirs:      src/main/
  main-is:             Main.hs
  build-depends:       base >= 4.5  && < 5,
                       aeson,
                       bytestring,
                       Cabal,
                       fast-logger,
                       gitrev >= 1.1,
                       monad-logger,
                       stack-ide,
                       stack-ide-api,
                       text
  default-language:    Haskell2010
  ghc-options:         -Wall
