name:                 ide-backend-common
version:              0.10.0
synopsis:             Shared library used be ide-backend and ide-backend-server
description:          Should not be used by end users
license:              MIT
license-file:         LICENSE
author:               Duncan Coutts, Mikolaj Konarski, Edsko de Vries
maintainer:           Duncan Coutts <duncan@well-typed.com>
copyright:            (c) 2015 FP Complete
category:             Development
build-type:           Simple
cabal-version:        >=1.10
extra-source-files:   README.md

library
  exposed-modules:    IdeSession.Util
                      IdeSession.Util.BlockingOps
                      IdeSession.Util.Logger
                      IdeSession.Util.PrettyVal
                      IdeSession.GHC.API
                      IdeSession.GHC.Requests
                      IdeSession.GHC.Responses
                      IdeSession.RPC.API
                      IdeSession.RPC.Server
                      IdeSession.RPC.Stream
                      IdeSession.Strict.Container
                      IdeSession.Strict.IntMap
                      IdeSession.Strict.List
                      IdeSession.Strict.Map
                      IdeSession.Strict.Maybe
                      IdeSession.Strict.Pair
                      IdeSession.Strict.Trie
                      IdeSession.Strict.IntervalMap
                      IdeSession.Strict.MVar
                      IdeSession.Strict.IORef
                      IdeSession.Strict.StateT
                      IdeSession.Types.Public
                      IdeSession.Types.Private
                      IdeSession.Types.Translation
                      IdeSession.Types.Progress

  build-depends:      base                 >= 4.5     && < 5,
                      filepath             >= 1.3     && < 1.5,
                      directory            >= 1.1     && < 1.3,
                      containers           >= 0.4.2   && < 1,
                      bytestring           >= 0.9.2   && < 1,
                      mtl                  >= 2.1     && < 2.3,
                      async                >= 2.0     && < 2.1,
                      aeson                >= 0.6.2   && < 0.10,
                      unix                 >= 2.5     && < 2.8,
                      temporary            >= 1.1.2.4 && < 1.3,
                      bytestring-trie      >= 0.2     && < 0.3,
                      text                 >= 0.11    && < 1.3,
                      fingertree           >= 0.0.1   && < 0.2,
                      binary               >= 0.7.1.0 && < 0.8,
                      data-accessor        >= 0.2     && < 0.3,
                      crypto-api           >= 0.12    && < 0.14,
                      pureMD5              >= 2.1     && < 2.2,
                      tagged               >= 0.4     && < 0.9,
                      transformers         >= 0.3     && < 0.5,
                      attoparsec           >= 0.10    && < 0.14,
                      template-haskell,
                      pretty-show          >= 1.3     && < 1.7,
                      monad-logger

  -- GHC.Generics lived in `ghc-prim` for GHC 7.2 & GHC 7.4
  if impl(ghc < 7.6)
      build-depends:  ghc-prim == 0.2.*

  default-language:   Haskell2010
  other-extensions:   CPP
                      DeriveDataTypeable
                      DeriveFoldable
                      DeriveFunctor
                      DeriveGeneric
                      DeriveTraversable
                      FlexibleContexts
                      FlexibleInstances
                      GADTs
                      GeneralizedNewtypeDeriving
                      MultiParamTypeClasses
                      NamedFieldPuns
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TemplateHaskell
                      TypeFamilies
                      TypeSynonymInstances

  ghc-options:        -Wall -fno-warn-unused-do-bind
